--- a/src/main/resources/assets/thecroodaceousera/lang/en_us.json
+++ b/src/main/resources/assets/thecroodaceousera/lang/en_us.json
@@ -6,10 +6,12 @@
   "item.thecroodaceousera.jackrobat_spawn_egg": "Jackrobat Spawn Egg",
   "item.thecroodaceousera.liyote_spawn_egg": "Liyote Spawn Egg",
   "item.thecroodaceousera.mousephant_spawn_egg": "Mousephant Spawn Egg",
+  "item.thecroodaceousera.mosquito_spawn_egg": "Mosquito Spawn Egg",
 
   "entity.thecroodaceousera.jackrobat": "Jackrobat",
   "entity.thecroodaceousera.liyote": "Liyote",
   "entity.thecroodaceousera.mousephant": "Mousephant",
+  "entity.thecroodaceousera.mosquito": "Mosquito",
 
   "block.thecroodaceousera.croodaceous_sand": "Croodaceous Sand",
   "block.thecroodaceousera.croodaceous_sandstone": "Croodaceous Sandstone",
