add bear owl, refactor some stuff

--- a/src/main/resources/assets/thecroodaceousera/lang/en_us.json
+++ b/src/main/resources/assets/thecroodaceousera/lang/en_us.json
@@ -7,11 +7,13 @@
   "item.thecroodaceousera.liyote_spawn_egg": "Liyote Spawn Egg",
   "item.thecroodaceousera.mousephant_spawn_egg": "Mousephant Spawn Egg",
   "item.thecroodaceousera.mosquito_spawn_egg": "Mosquito Spawn Egg",
+  "item.thecroodaceousera.bear_owl_spawn_egg": "Bear Owl Spawn Egg",
 
   "entity.thecroodaceousera.jackrobat": "Jackrobat",
   "entity.thecroodaceousera.liyote": "Liyote",
   "entity.thecroodaceousera.mousephant": "Mousephant",
   "entity.thecroodaceousera.mosquito": "Mosquito",
+  "entity.thecroodaceousera.bear_owl": "Bear Owl",
 
   "block.thecroodaceousera.croodaceous_sand": "Croodaceous Sand",
   "block.thecroodaceousera.croodaceous_sandstone": "Croodaceous Sandstone",
